// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders quote after fetching 1`] = `
<div>
  <div>
    <a
      href="https://vitest.dev/"
      target="_blank"
    >
      <img
        alt="Vitest logo"
        class="logo"
        src="/vitest.svg"
      />
    </a>
    <a
      href="https://react.dev"
      target="_blank"
    >
      <img
        alt="React logo"
        class="logo react"
        src="/src/assets/react.svg"
      />
    </a>
  </div>
  <h1>
    Vitest + React 🤝
  </h1>
  <section>
    <button>
      count is 
      0
    </button>
    <h2>
      Quote of the Day
    </h2>
    <p
      data-testid="quote"
    >
      Loading...
    </p>
  </section>
</div>
`;

exports[`renders quote after fetching 2`] = `
<div>
  <div>
    <a
      href="https://vitest.dev/"
      target="_blank"
    >
      <img
        alt="Vitest logo"
        class="logo"
        src="/vitest.svg"
      />
    </a>
    <a
      href="https://react.dev"
      target="_blank"
    >
      <img
        alt="React logo"
        class="logo react"
        src="/src/assets/react.svg"
      />
    </a>
  </div>
  <h1>
    Vitest + React 🤝
  </h1>
  <section>
    <button>
      count is 
      1
    </button>
    <h2>
      Quote of the Day
    </h2>
    <p
      data-testid="quote"
    >
      This is a test quote
    </p>
  </section>
</div>
`;
